downgraded java-version and re-enabled relocating snakeyaml