@@ -17,7 +17,7 @@ public enum PredicateSelection {
 
   public static PredicateSelection byOrdinalOrFirst(int ordinal) {
     if (ordinal < 0 || ordinal >= values.size())
-      return values.getFirst();
+      return values.get(0);
 
     return values.get(ordinal);
   }
