@@ -33,7 +33,7 @@ public enum ShopFilteringCriteria {
 
   public static ShopFilteringCriteria byOrdinalOrFirst(int ordinal) {
     if (ordinal < 0 || ordinal >= values.size())
-      return values.getFirst();
+      return values.get(0);
 
     return values.get(ordinal);
   }
